--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="index.html">
+                <div id="pic"></div>
+            </a>
+        </nav>
+    </header>
 </body>
 </html>
